// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextMenu tests does not shows when event with incorrect "id" is triggered 1`] = `
<div>
  <nav
    class="react-contextmenu"
    role="menu"
    style="position: fixed; opacity: 0; pointer-events: none;"
    tabindex="-1"
  />
</div>
`;

exports[`ContextMenu tests does not shows when event with incorrect "id" is triggered 2`] = `
<div>
  <nav
    class="react-contextmenu"
    role="menu"
    style="position: fixed; opacity: 0; pointer-events: none;"
    tabindex="-1"
  />
</div>
`;

exports[`ContextMenu tests shows when event with correct "id" is triggered 1`] = `
<div>
  <nav
    class="react-contextmenu"
    role="menu"
    style="position: fixed; opacity: 0; pointer-events: none;"
    tabindex="-1"
  />
</div>
`;

exports[`ContextMenu tests shows when event with correct "id" is triggered 2`] = `
<div>
  <nav
    class="react-contextmenu react-contextmenu--visible"
    role="menu"
    style="position: fixed; opacity: 0; pointer-events: none;"
    tabindex="-1"
  />
</div>
`;
